--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -11,7 +11,7 @@
                         <h4><a href="{{ theme.url }}">{{ theme.title }}</a></h4>
                         <h5>by <b>{{ theme.author }}</b></h5>
                         <div class="product-description">
-                            {{ theme.description_markdown | truncate: 105 | markdownify }}
+                            {{ theme.description_markdown | truncate: 105 }}
                         </div>
                         {% if theme.price == nil %}
                         {% else %}
@@ -33,7 +33,7 @@
                         <h4><a href="{{ plugins.url }}">{{ plugins.title }}</a></h4>
                         <h5>by <b>{{ plugins.author }}</b></h5>
                         <div class="product-description">
-                            {{ plugins.description_markdown | truncate: 105 | markdownify }}
+                            {{ plugins.description_markdown | truncate: 105 }}
                         </div>
                         {% if plugins.price == nil %}
                         {% else %}
