--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -414,9 +414,9 @@ nav {
             position: absolute;
             background-color: #fff;
             border-radius: 2px;
-            min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
             z-index: 1;
+            padding: 3px 0;
 
             .drop_icon {
                 width: calc(100% - 130px);
@@ -434,14 +434,17 @@ nav {
 
             a {
                 float: none;
-                color: black;
-                padding: 12px 16px;
+                color: #a8a8a8;
+                padding: 5px 10px;
                 text-decoration: none;
                 display: block;
                 text-align: left;
+                transition: .2s linear background-color, .2s color linear;
+                border-radius: 2px;
 
                 &:hover {
-                    background-color: #ddd;
+                    color: #4f545c;
+                    background-color: #f2f2f2;
                 }
             }
 
