--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -441,6 +441,7 @@ nav {
                 text-align: left;
                 transition: .2s linear background-color, .2s color linear;
                 border-radius: 2px;
+                font-size: 12px;
 
                 &:hover {
                     color: #4f545c;
