--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -20,7 +20,7 @@
 			<img src="{{ drop_links.icon }}" class="drop_icon">
 			<a href="{{ drop_links.link }}" class="has_icon" {% if link.new_window %}target="_blank"{% endif %}>{{ drop_links.name }}</a>
 			{% else %}
-			<a href="{{ drop_links.link }}" {% if link.new_window %}target="_blank"{% endif %}>{{ drop_links.name }}</a>
+			<a href="{{ drop_links.link }}" {% if drop_links.new_window %}target="_blank"{% endif %}>{{ drop_links.name }}</a>
 			{% endif %}
 			{% endfor %}
 		</div>
