--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -177,41 +177,31 @@
     }
 }
 
-.upload-button-container {
-    width: 40px;
-    height: 40px;
+.help-btn {
+    width: 56px;
+    height: 56px;
     position: fixed;
     right: 20px;
     bottom: 20px;
     overflow: hidden;
-    background-color: $brand-color;
-    border-radius: 25px;
-    text-indent: 13px;
+    background-color: #339b78;
+    border-radius: 50%;
     transition: .2s linear width, .2s linear background-color;
     box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.6);
     z-index: 1;
-
+    color: #fff;
+    font-size: 23px;
+    line-height: 56px;
+    text-align: center;
+    .white {
+        color: #fff;
+    }
     &:hover {
         background-color: darken($brand-color, 10%);
-        width: 146px;
     }
 
     &:focus {
         background-color: darken($brand-color, 20%);
-    }
-
-    .upload-btn {
-        width: 100%;
-        height: 40px;
-        color: #fff;
-        font-size: 15px;
-        line-height: 37px;
-    }
-
-    span {
-        font-size: 23px;
-        position: relative;
-        top: 2px;
     }
 }
 
@@ -467,7 +457,13 @@ nav {
         }
     }
 }
-
+.section-btn {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-bottom: -40px;
+    position: relative;
+    top: -44px;
+}
 .product-rating {
     display: -webkit-box;
 
