--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -186,7 +186,7 @@
     overflow: hidden;
     background-color: #339b78;
     border-radius: 50%;
-    transition: .2s linear width, .2s linear background-color;
+    transition: .2s linear box-shadow, .2s linear background-color;
     box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.6);
     z-index: 1;
     color: #fff;
@@ -198,6 +198,8 @@
     }
     &:hover {
         background-color: darken($brand-color, 10%);
+        text-decoration: underline;
+        box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.6);
     }
 
     &:focus {
