--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -15,7 +15,7 @@
 							color: $brand-color;
 						}
 						&:hover {
-							background-color: rgba(#fff, 0.8)
+							background-color: rgba(#fff, 0.8) !important;
 						}
 					}
 				}
