--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
 				<li class="footer-nav">
 					<h4>Help</h4>
 					<ul>
-						<li><a href="https://support.betterdocs.us">Support</a></li>
+						<li><a href="https://documentation.betterdocs.us">Support</a></li>
 						<li><a href="/contact/">Contact</a></li>
 						<li><a href="/about/">About</a></li>
 					</ul>
