--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -43,9 +43,11 @@ header {
 		padding: 0px 0px 0px 10px;
 		transition: .2s linear background-color, .2s linear box-shadow;
 		background-color: $brand-color;
+		height: 68px;
 
 		@media #{$mid-point} {
 			padding: 0px 0px 0px 15px;
+			height: unset;
 		}
 
 		nav {
@@ -82,7 +84,7 @@ header {
 			margin-top: 0px;
 
 			a.nav-toggle {
-				top: -20px;
+				top: -13px;
 			}
 		}
 
