--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
 					<ul>
 						<li><a href="/">Home</a></li>
 						<li><a href="/themes/">Themes</a></li>
-						<li><a href="/pluginss/">Plugins</a></li>
+						<li><a href="/plugins">Plugins</a></li>
 					</ul>
 				</li>
 
