--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -22,10 +22,10 @@
                 </li>
             {% endfor %}
         </ul>
-        <h2><a href="{{ site.url }}/plugins/">Plugins ({{ site.pluginss | size }})</a></h2>
+        <h2><a href="{{ site.url }}/plugins/">Plugins ({{ site.plugins | size }})</a></h2>
         <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_products" class="btn"><strong>&#9998;</strong> Manage products</a></p>
             <ul class="product-list" id="plugins">
-            {% for plugins in site.pluginss limit: 3 %}
+            {% for plugins in site.plugins limit: 3 %}
                 <li>
                     <div class="styles">
                     <!-- {% include product-styles.html product=plugins %} -->
