--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -3,6 +3,10 @@ $brand-color-2: #1868df;
 $default-hero-image: "/images/hero/box-top.jpg";
 $cubic: cubic-bezier(.64,.09,.08,1);
 
+// Software Colors
+$beautifuldiscord: #7289DA;
+$enhanceddiscord: #cc3200;
+$bandagedbd: #3d82e7;
 
 // Breakpoints
 $tablet: "(min-width: 450px)";
