--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -317,6 +317,7 @@ div#gh-comments {
 
             .comment-reactions-options {
                 display: flex;
+                flex-wrap: wrap;
 
                 div.reaction {
                     display: -webkit-box;
@@ -557,9 +558,9 @@ nav {
 }
 
 .filter-container {
-    display: flex;
+    display: block;
     justify-content: flex-start;
-    margin: 10px 0;
+    margin: 18px 0;
     margin-left: 36px;
     a {
         text-decoration: unset;
@@ -629,7 +630,19 @@ nav {
             color: #6f6f6f;
             font-size: 13px;
             padding: 7px 12px;
+            margin-top: 8px;
+            display: -webkit-inline-box;
             transition: .2s linear color, .2s linear background-color, .2s linear box-shadow, .2s linear border;
+                .filter-i {
+                    display: -webkit-inline-box;
+                    position: relative;
+                    margin-right: 3px;
+                    margin-top: -4px;
+                    top: 3px;
+                    .filter-icon {
+                        height: 16px;
+                    }
+                }
             &:focus, &:active {
                 box-shadow: 0 1px 2px 0 rgba($brand-color,0.45), 0 2px 6px 2px rgba($brand-color,0.30);
                 color: $brand-color;
