--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -27,6 +27,10 @@
 	text-align: center;
 	position: relative;
 	z-index: 99;
+	padding: 20px 0px 0px 0px;
+	.text-container {
+		max-width: calc(100% - 125px)
+	}
 	h2 {
 		font-size: 3.2rem;
 		line-height: 1.3;
