--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -29,7 +29,7 @@
 	z-index: 99;
 	padding: 20px 0px 0px 0px;
 	.text-container {
-		max-width: calc(100% - 125px)
+		max-width: calc(100% - 125px);
 	}
 	h2 {
 		font-size: 3.2rem;
