--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -40,4 +40,7 @@ $('.dropdown').on('click', function(event) {
 $('html').click(function() {
 	$('.nav-link').removeClass('open');
 });
+$(".dropdown").hover(function () {
+    $('.nav-link').toggleClass("drop-hover");
+ });
 </script>
