--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,11 @@ layout: compress
 	<!-- Google Tag Manager (noscript) -->
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NG6W33N" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
-	<header>
+	{% assign headerbg = "" %}
+		{% if page.themes or pages.plugins %}
+			{% assign headerbg = headerbg | append: " products" %}
+		{% endif %}
+	<header class="{{ headerbg }}">
 		<div class="container">
 			<div class="company-name"><a href="{{ site.baseurl }}/">{% include logo.html %}</a></div>
 			{% include navigation.html %}
